# automated_and_ai_webscraping_tool

./: .gitignore  dagster_cloud.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: branch_deployments.yml  dagster-plus-deploy.yml  deploy.yml
DAGSTER_HOME/: pipeline.py  scheduler.py
src/helper/: b2_helper.py  gemini_helper.py  llama_helper.py  pinecone_helper.py
src/helper/prompts/: summarize_and_categorize.txt
src/processor/: article_processor.py  database_processor.py
src/scraper/: base_scraper.py  bbc_scraper.py  npr_scraper.py  registry.py
src/utils/: utils.py
